Infra: did some memory optimisation in the Dockerfile to reduce the ECS task definition memory required.